--- a/market-data/libs/recorders/Cargo.toml
+++ b/market-data/libs/recorders/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "binance"
+name = "recorders"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tungstenite = { version = "0.26.1", features = ["native-tls"] }
-recorders = { path = "../../../libs/recorders" }
+serde = { version = "1.0.217", features = ["derive"] }
+serde_yaml = "0.9.34"
