receiver framework in place

--- a/market-data/apps/recorders/binance/src/config.yaml
+++ b/market-data/apps/recorders/binance/src/config.yaml
@@ -2,4 +2,4 @@ ws: "wss://data-stream.binance.vision"
 tickers:
   - "btcusdt@trade"
   - "ethusdt@trade"
-  - "btcusdt@depth"
+  # - "btcusdt@depth" (book)
