--- a/market-data/libs/recorders/Cargo.toml
+++ b/market-data/libs/recorders/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.217", features = ["derive"] }
 serde_yaml = "0.9.34"
+tungstenite = { version = "0.26.1", features = ["native-tls"] }
