--- a/market-data/libs/receivers/Cargo.toml
+++ b/market-data/libs/receivers/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.135"
 serde_yaml = "0.9.34"
 tungstenite = { version = "0.26.1", features = ["native-tls"] }
