--- a/market-data/libs/receivers/Cargo.toml
+++ b/market-data/libs/receivers/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 serde_yaml = "0.9.34"
+serde-this-or-that = "0.4.2"
 tungstenite = { version = "0.26.1", features = ["native-tls"] }
+reqwest = { version = "0.12.12", features = ["json", "blocking"] }
